--- a/aplikacja/views/layouts/main.handlebars
+++ b/aplikacja/views/layouts/main.handlebars
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Did you know</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
         <link rel="stylesheet" href="/styles/main.css">
@@ -15,7 +16,7 @@
             <nav class="main_nav">
                 <a href ="/">Main Page</a>
                 <a href ="#">About</a>
-                <a href ="/contact">Contact</a>
+                <a href ="/contact">Influence</a>
             </nav>
         </header>
         {{{body}}}
