--- a/aplikacja/static/public/styles/main.css
+++ b/aplikacja/static/public/styles/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
 body{
-    background-color: black;
+    background-color: darkgray
 }
 .main_nav{
     display: flex;
@@ -82,4 +82,41 @@ body{
 
 .tiles li:hover{
     box-shadow: 0 0 30px red;
-]}
+}
+
+form{
+    padding-top: 20px;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    flex-flow: column;
+    width: 400px;
+}
+
+fieldset{
+    width: 100%;
+}
+
+.manage{
+    display: flex;
+    justify-content: center;
+    flex: 3;
+}
+
+.manage label{
+    flex: 2;
+}
+
+.manage textarea{
+    flex: 5;
+}
+
+.manage select{
+    flex: 5;
+}
+
+.cent{
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
