--- a/aplikacja/static/public/styles/main.css
+++ b/aplikacja/static/public/styles/main.css
@@ -17,7 +17,7 @@ body{
     border: 1px solid black;
     flex: 1;
     font-family: 'Hanalei Fill', cursive;
-    transition: 0.4s;
+    transition: 0.1s;
     white-space: nowrap;
 }
 .main_nav a:nth-of-type(1):hover{
@@ -53,21 +53,26 @@ body{
     flex: 0 1;
     margin: 10px 0;
     height: 305px;
+    max-width: 300px;
     background-color: #ffffff;
+    padding: 0;
 }
 .tiles li img{
-    max-width: 300px;
-    max-height: 300px;
+    width: 300px;
+    height: 84.5%;
     margin-top: auto;
 }
 .tiles li h1{
+    height: 100%;
     border-bottom: 1px solid black;
     font-size: 30px;
-    transition: 1s;
+    transition: 0.2s;
     margin: 0;
 }
 
 .tiles li a{
+    border-bottom: 1px solid black;
+    height: 15%;
     text-decoration: none;
     color: black;
     text-align: center;
@@ -75,7 +80,6 @@ body{
 }
 
 .tiles h1:hover{
-    font-size: 35px;
     background-color: purple;
     border: 1px solid black;
 }
